# Discord-Voice-Calc

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
d_voice/: env.py  util.py
d_voice/db/: models.py  sessions.py
d_voice/dbot/: bot.py  commands.py
